// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for state: error, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  font: normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  font: normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: medium and hasLabel: true 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
legend {
  margin: 0 0 1rem;
  padding: 0;
  color: #000;
  font: normal normal 600 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
}
@media(min-width:760px) and (max-width:999px) {
  legend {
    font-size: 1.125rem;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  legend {
    font-size: 1.25rem;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  legend {
    font-size: 1.375rem;
  }
}

@media(min-width:1760px) {
  legend {
    font-size: 1.5rem;
  }
}

.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  font: normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: small and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  font: normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: small and hasLabel: true 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
legend {
  margin: 0 0 1rem;
  padding: 0;
  color: #000;
  font: normal normal 600 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  font: normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: success, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  font: normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;
